Use no.ssb.dapla:dataset-uri in exposed api's
Change semantics so that we now refer to datasets and dataset files.
A dataset can consist of one or more dataset files. The location of
those dataset files is given by a dataset uri.